objects/Signers__c.object
<CustomObject>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Signers</relationshipLabel>
        <relationshipName>Signers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <label>Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Signers</label>
    <nameField>
        <label>Signer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>EmailAddress__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>